Criado novos Endpoint para criar dashboard do projeto no FrontEnd
